--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,5 +5,6 @@ $body-bg: #f8fafc;
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+//$primary:#784511;
 
 $brown: #784511;
