--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,3 +13,22 @@
     padding:1%;
     border: 1px solid black;
 }
+.outter-games{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    .inner-games{
+        padding: 2%;
+        border-bottom: 1px solid black;
+        &:last-child{
+            border: 0 !important;
+        }
+        &__info{
+    
+        }
+        &__options{
+            display:flex;
+            align-items: flex-end;
+        }
+    }
+}
