--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,3 +53,77 @@
         margin: 3% 0; 
     }
 }
+
+/*
+*   Card Loookup CSS
+*/
+
+
+  .lookup {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  
+  #cardData {
+    margin-top: 20px;
+  }
+  
+/*
+* Deck Builder styles
+*/
+
+.deck-builder {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#deck-list {
+	list-style: none;
+	padding: 0;
+}
+
+#deck-list li {
+	margin-bottom: 0.5rem;
+}
+
+#add-card-form {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+}
+
+#add-card-form input {
+	margin-right: 0.5rem;
+}
+
+#add-card-form button {
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	cursor: pointer;
+}
+
+#deck-list li {
+	display: flex;
+	align-items: center;
+	margin-bottom: 0.5rem;
+}
+
+.card-image {
+	width: 50px;
+	height: 70px;
+	object-fit: cover;
+	margin-right: 1rem;
+}
+
+.card-info {
+	flex-grow: 1;
+}
+
