add profile page styles

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -127,3 +127,11 @@
 	flex-grow: 1;
 }
 
+/*
+*   Profile page styles
+*/
+.profile-pic img{
+    width: 100%;
+    border-radius: 50%;
+    padding: 5%;
+}
