--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -134,6 +134,12 @@
     font-size: 1.25rem;
     /*font-family: 'MedievalSharp', cursive;*/
     font-family: 'Sorts Mill Goudy', serif;
+    span{
+        font-weight: bold;
+    }
+    &__username{
+        font-size:2rem;
+    }
     &__pic{
         width: 100%;
         border-radius: 50%;
