--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -166,5 +166,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    @media screen and (max-width: 768px) {
+        left: 0;
+        width: 4.75%;
+    }
+}
+.dropdown-menu[data-bs-popper]{
+    left: -100;
 }
