dont allow for double uploads

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -164,6 +164,11 @@
 *   Profile page styles
 */
 .profile-container{
+
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-size: 1.25rem;
     /*font-family: 'MedievalSharp', cursive;*/
     font-family: 'Sorts Mill Goudy', serif;
