--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,6 +30,19 @@
         border: 0 !important;
     }
 }
+.header-text{
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: 'Sorts Mill Goudy', serif;
+}
+.white-box{
+    max-width: 1200px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 /*
 *   Search page styles
 */
@@ -41,6 +54,20 @@
     }
     p{
         font-size: 1rem;
+        font-family: 'Sorts Mill Goudy', serif;
+        color: black;
+    }
+}
+.search-btn{
+    padding: .25% 1%;
+    border-radius: 0;
+}
+.search-row{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    label{
+        padding-right: 1%;
         font-family: 'Sorts Mill Goudy', serif;
         color: black;
     }
@@ -182,6 +209,7 @@
         width: 100%;
         border-radius: 50%;
         padding: 5%;
+        aspect-ratio: 1/1;
     }
 }
 
@@ -212,4 +240,27 @@
 }
 .dropdown-menu[data-bs-popper]{
     left: -100;
+}
+
+/*
+*   Alert Bar styles
+*/
+.alert-bar{
+    width: 100%;
+    background-color: rgba(33, 37, 41, 0.03);
+    p{
+        margin-bottom: 0;
+        text-align: center;
+        padding: 1%;
+    }
+}
+
+
+/*
+*   Front Page styles (before login)
+*/
+.front{
+    a{
+        color: rgb(33, 37, 41);
+    }
 }
